# funky_spotify

./: .gitignore  README.md  app.json  app.py  create_playlist.py  get_current_track.py  pyproject.toml  tokens.py  track_analysis.py
src/playlist_analysis/: create_playlist.py  get_current_track.py  track_analysis.py
src/shuffle_analysis/: log_songs_played.py
