[tool.poetry]
name = "funky_spotify"
version = "0.1.0"
description = ""
authors = ["lucy.bowles <lucy.bowles@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
jupyterlab = "^3.4.8"
plotly = "^5.10.0"
black = {extras = ["jupyter"], version = "^22.10.0"}
pytest = "^7.2.0"
coverage = "^7.0.3"
mypy = {extras = ["reports"], version = "^0.991"}

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"

[tool.isort]
profile = "black"

[tool.coverage.html]
show_contexts = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
